Acknowledgements: Added ELLIIT logo to qrc file

--- a/resources/inviwo.qrc
+++ b/resources/inviwo.qrc
@@ -124,6 +124,7 @@
         <file>inviwo/inviwo-logo-300px.png</file>
         <file>inviwo/inviwo-logo-light-600px.png</file>
         
+        <file>images/elliit.png</file>
         <file>images/kth.png</file>
         <file>images/liu-black.png</file>
         <file>images/liu-white-crop.png</file>
