--- a/resources/inviwo.qrc
+++ b/resources/inviwo.qrc
@@ -100,6 +100,7 @@
         <file>svgicons/file-warning.svg</file>
 
         <file>svgicons/haptics.svg</file>
+        <file>svgicons/trashcan.svg</file>
 
         <file>svgicons/view-x-m.svg</file>
         <file>svgicons/view-x-p.svg</file>
