Various: GCC include/warning fixes, Added image support to the change log. freetype cmake fix.

--- a/resources/changelog.qrc
+++ b/resources/changelog.qrc
@@ -3,4 +3,7 @@
     <qresource prefix="/">
         <file>changelog.html</file>
     </qresource>
+     <qresource prefix="/resources/changelog/">
+        <file alias="canvas-with-properties.png">changelog/canvas-with-properties.png</file>
+    </qresource>
 </RCC>
