AnimationQt: updating icons
* switched to SVG icons
* changed color to Inviwo blue since they were hardly visible before

--- a/modules/animationqt/resources/animation.qrc
+++ b/modules/animationqt/resources/animation.qrc
@@ -108,7 +108,7 @@
 		<file>icons/account_lock_password_protect_save_saving_security_icon_64.png</file>
 		<file>icons/account_lock_password_protect_save_saving_security_icon_128.png</file>
 		<file>icons/account_lock_password_protect_save_saving_security_icon_128.svg</file>
-		<file>icons/crossedeye_32.png</file>
+		<file>icons/crossedeye.svg</file>
 		<file>icons/off_on_player_power_start_stop_icon_32.png</file>
 		<file>icons/off_on_player_power_start_stop_icon_64.png</file>
 		<file>icons/off_on_player_power_start_stop_icon_128.png</file>
