--- a/resources/changelog.qrc
+++ b/resources/changelog.qrc
@@ -5,5 +5,6 @@
     </qresource>
      <qresource prefix="/resources/changelog/">
         <file alias="canvas-with-properties.png">changelog/canvas-with-properties.png</file>
+        <file alias="brushing.jpg">changelog/brushing.jpg</file>
     </qresource>
 </RCC>
