Core/Various: Added support for proprety links within a processor.
Some minor other fixes and cleanup.

--- a/resources/changelog.qrc
+++ b/resources/changelog.qrc
@@ -6,5 +6,6 @@
      <qresource prefix="/resources/changelog/">
         <file alias="canvas-with-properties.png">changelog/canvas-with-properties.png</file>
         <file alias="brushing.jpg">changelog/brushing.jpg</file>
+        <file alias="internal-links.png">changelog/internal-links.png</file>
     </qresource>
 </RCC>
