QtEditor: Added an icon grid view to the welcome screen, and better search in search fields.
Cleanup of the workspace model and views.

--- a/resources/inviwo.qrc
+++ b/resources/inviwo.qrc
@@ -41,7 +41,10 @@
         <file>svgicons/listitem-remove-enabled.svg</file>
         <file>svgicons/listitem-remove-disabled.svg</file>
         <file>svgicons/gridlist.svg</file>
+        <file>svgicons/detaillist.svg</file>
         <file>svgicons/treelist.svg</file>
+        <file>svgicons/treelist-expand.svg</file>
+        <file>svgicons/treelist-collapse.svg</file>
 
         <file>svgicons/arrow-down-enabled.svg</file>
         <file>svgicons/arrow-down-disabled.svg</file>
