Jenkins: regression report
* individual color-coded image status (ok, warning, fail) instead of "fail" as soon as one image in the test failed

--- a/tools/ivwpy/regression/resources/report.css
+++ b/tools/ivwpy/regression/resources/report.css
@@ -53,6 +53,9 @@ ol li {
 .fail {
     background-color : @color-primary-1;
 }
+.warning {
+    background-color: @color-secondary-1-2;
+}
 .disabled {
     background-color : @color-secondary-1-1;
 }
