Core: Ports/Properties Help support
InviwoSetupInfo only stores used processors/modules

--- a/resources/inviwo.qrc
+++ b/resources/inviwo.qrc
@@ -5,6 +5,7 @@
         <file>svgicons/help.svg</file>
 
         <file>svgicons/open.svg</file>
+        <file>svgicons/open-append.svg</file>
         <file>svgicons/newfile.svg</file>
 
         <file>svgicons/save.svg</file>
