Meta: Changelog update

--- a/resources/changelog.qrc
+++ b/resources/changelog.qrc
@@ -8,5 +8,6 @@
         <file alias="brushing.jpg">changelog/brushing.jpg</file>
         <file alias="internal-links.png">changelog/internal-links.png</file>
         <file alias="compositeproperty-collapse.jpg">changelog/compositeproperty-collapse.jpg</file>
+        <file alias="configure-properties.png">changelog/configure-properties.png</file>
     </qresource>
 </RCC>
