--- a/resources/stylesheets/inviwo.qss
+++ b/resources/stylesheets/inviwo.qss
@@ -1046,17 +1046,14 @@ QSplitter#WelcomeWidget QLineEdit {
     padding: 0.25em;
 }
 
-#changeLogCollapsible #collapseTitle,#collapseButton {
-    border: none;
-    font-size: 26pt;
+#changeLogCollapsible #collapseTitle {
+    font-size: 20pt;
+}
+
+#changeLogCollapsible #collapseButton {
+    width: 0.75em;
+    height: 0.75em;
+}
+#changeLogCollapsible #collapseButton:open {
     color: #268bd2;
 }
-#changeLogCollapsible #collapseTitle:hover,#collapseButton:hover {
-    color: #5b5f62;
-
-}
-#changeLogCollapsible #collapseTitle:pressed,#collapseButton:pressed {
-    color: #1e70a8;
-}
-
-
