Qt: refactored WelcomeWidget
* made splitter handle for change log collapsible
* central widget is now a stacked widget

--- a/resources/inviwo.qrc
+++ b/resources/inviwo.qrc
@@ -50,6 +50,8 @@
 
         <file>svgicons/arrow-down-enabled.svg</file>
         <file>svgicons/arrow-down-disabled.svg</file>
+        <file>svgicons/arrow-left-disabled.svg</file>
+        <file>svgicons/arrow-left-enabled.svg</file>
         <file>svgicons/arrow-right-enabled.svg</file>
         <file>svgicons/arrow-right-disabled.svg</file>
         <file>svgicons/arrow-up-enabled.svg</file>
