--- a/resources/changelog.qrc
+++ b/resources/changelog.qrc
@@ -9,5 +9,6 @@
         <file alias="internal-links.png">changelog/internal-links.png</file>
         <file alias="compositeproperty-collapse.jpg">changelog/compositeproperty-collapse.jpg</file>
         <file alias="configure-properties.png">changelog/configure-properties.png</file>
+        <file alias="colorscalelegend.jpg">changelog/colorscalelegend.jpg</file>
     </qresource>
 </RCC>
