Core/Qt: fileproperty and widget fixes

--- a/resources/stylesheets/inviwo.qss
+++ b/resources/stylesheets/inviwo.qss
@@ -442,7 +442,12 @@ QGroupBox::title {
 ************************/
 QListView {
     background: transparent;
+    background: #3a3a3d;
     /*using border here breaks the QCombobox */
+}
+
+QListVie#Completer {
+    background: #3a3a3d;
 }
 
 QDockWidget#AnimationEditorWidget QListView {
