Core/Various: Listproperty gained the ability to move properties up and down.

--- a/resources/inviwo.qrc
+++ b/resources/inviwo.qrc
@@ -38,10 +38,16 @@
         <file>svgicons/lineedit-clear-active.svg</file>
 
         <file>svgicons/dragndrop.svg</file>
+
         <file>svgicons/listitem-add-enabled.svg</file>
         <file>svgicons/listitem-add-disabled.svg</file>
         <file>svgicons/listitem-remove-enabled.svg</file>
         <file>svgicons/listitem-remove-disabled.svg</file>
+        <file>svgicons/listitem-up-enabled.svg</file>
+        <file>svgicons/listitem-up-disabled.svg</file>
+        <file>svgicons/listitem-down-enabled.svg</file>
+        <file>svgicons/listitem-down-disabled.svg</file>
+
         <file>svgicons/gridlist.svg</file>
         <file>svgicons/detaillist.svg</file>
         <file>svgicons/treelist.svg</file>
