Qt/Various: bugfixes found when updating workspaces. Refactoring of The consoleWidget to use a custom model and to add item after the current event is done. This enables adding several lines in one go which greatly speeds up the logging.

--- a/resources/stylesheets/inviwo.qss
+++ b/resources/stylesheets/inviwo.qss
@@ -360,6 +360,10 @@ QPushButton:hover, QToolButton:hover {
     border: 0.0625em solid #268bd2;
 }
 
+QPushButton:focus, QToolButton:focus {
+    border: 0.0625em solid #268bd2;
+}
+
 QLineEdit#ColorLineEdit[input="valid"] {
     border: 0.0625em solid #1a800d;
 }
