--- a/resources/changelog.qrc
+++ b/resources/changelog.qrc
@@ -4,11 +4,11 @@
         <file>changelog.html</file>
     </qresource>
      <qresource prefix="/resources/changelog/">
-        <file alias="canvas-with-properties.png">changelog/canvas-with-properties.png</file>
+        <file alias="canvas-with-properties.jpg">changelog/canvas-with-properties.jpg</file>
         <file alias="brushing.jpg">changelog/brushing.jpg</file>
-        <file alias="internal-links.png">changelog/internal-links.png</file>
+        <file alias="internal-links.jpg">changelog/internal-links.jpg</file>
         <file alias="compositeproperty-collapse.jpg">changelog/compositeproperty-collapse.jpg</file>
-        <file alias="configure-properties.png">changelog/configure-properties.png</file>
+        <file alias="configure-properties.jpg">changelog/configure-properties.jpg</file>
         <file alias="colorscalelegend.jpg">changelog/colorscalelegend.jpg</file>
     </qresource>
 </RCC>
