Qt: More tf help

--- a/resources/inviwo.qrc
+++ b/resources/inviwo.qrc
@@ -169,6 +169,8 @@
         <file>inviwo/inviwo-logo-300px.png</file>
         <file>inviwo/inviwo-logo-light-600px.png</file>
         
+        <file>images/tf.png</file>
+
         <file>images/bmbf-white.svg</file>
         <file>images/dfg.svg</file>
         <file>images/elliit.svg</file>
