--- a/resources/stylesheets/inviwo.qss
+++ b/resources/stylesheets/inviwo.qss
@@ -265,6 +265,15 @@ QMenuBar, QMenuBar::item {
     background-color: #323235;
     selection-background-color: #3a3a3d;
 }
+QMenuBar::item {
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+    margin-top: 0.1em;
+    margin-bottom: 0.1em;
+}
+QMenuBar::item:first {
+    margin-left: 0.2em;
+}
 QMenu, QMenu::item, QMenu::item::selected {
     color: #999999;
     selection-color: #999;
@@ -1076,12 +1085,12 @@ QSplitter#WelcomeWidget::handle:horizontal:pressed {
     background: #1e70a8;
 }
 QSplitter#WelcomeWidget QToolButton {
-    font-size: 14pt;
+    font-size: 12pt;
 }
 QSplitter#WelcomeWidget QLineEdit {
     color: #c8ccd0;
-    font-size: 14pt;
-    padding: 0.25em;
+    font-size: 12pt;
+    padding: 0.15em;
 }
 QSplitter#WelcomeWidget QLabel#splitterHandleTitle {
     font-size: 11pt;
