Base: FIleCache review fix, change log.

--- a/resources/changelog.qrc
+++ b/resources/changelog.qrc
@@ -11,5 +11,6 @@
         <file alias="configure-properties.jpg">changelog/configure-properties.jpg</file>
         <file alias="colorscalelegend.jpg">changelog/colorscalelegend.jpg</file>
         <file alias="tetramesh-raycasting.jpg">changelog/tetramesh-raycasting.jpg</file>
+        <file alias="filecache.png">changelog/filecache.png</file>
     </qresource>
 </RCC>
