QtWidget: refine NumberWidget
* symmetric percentage bar

--- a/resources/stylesheets/inviwo.qss
+++ b/resources/stylesheets/inviwo.qss
@@ -373,6 +373,9 @@ QPushButton:focus, QToolButton:focus {
     border: 0.0625em solid #268bd2;
 }
 
+QLineEdit#NumberWidget:!focus:!disabled {
+    background: #2a2a2d;
+}
 QLineEdit#ColorLineEdit[input="valid"] {
     border: 0.0625em solid #1a800d;
 }
